force-app/src/objects/TR1__GenBrowseTabs__mdt.object
<CustomObject>
    <description>Tabs that can be shown in the generic browse component</description>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines if this tab is used.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__ComponentName__c</fullName>
        <description>The API name of component to be used in this tab.</description>
        <inlineHelpText>The API name of component to be used in this tab.</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Generic_Browse_Supported_Object__c</fullName>
        <inlineHelpText>The Generic Browse Supported Object this tab is used by.</inlineHelpText>
        <label>Generic Browse Supported Object</label>
        <referenceTo>TR1__GenBrowseObjects__mdt</referenceTo>
        <relationshipLabel>Generic Browse Tabs</relationshipLabel>
        <relationshipName>Generic_Browse_Tabs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TR1__Layout__c</fullName>
        <description>Deprecated: This setting is no longer in use</description>
        <label>Layout API Name(Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Lookup__c</fullName>
        <description>The API name of the field containing the Id of record to be used in this Tab.</description>
        <inlineHelpText>The API name of the field containing the Id of record to be used in this Tab.</inlineHelpText>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Panel__c</fullName>
        <inlineHelpText>In which of the 2 panels this tab should be added to, left or right.</inlineHelpText>
        <label>Used in Panel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>right</fullName>
                    <label>Right</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Position__c</fullName>
        <inlineHelpText>Relative position to the other tabs shown, lowest number is the left most tab.</inlineHelpText>
        <label>Tab Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__TabType__c</fullName>
        <inlineHelpText>Tabs of type component show a custom component, while recordDetail tabs show information through the recorddetail component.</inlineHelpText>
        <label>Tab Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>RecordDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Tab_label__c</fullName>
        <description>Custom label API name for tab name.</description>
        <inlineHelpText>Custom label API name for tab name.</inlineHelpText>
        <label>Tab label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Generic Browse Tab</label>
    <pluralLabel>Generic Browse Tabs</pluralLabel>
</CustomObject>